Set up API requests! (#15)
* AAAAAA

* adjust database seeding to hopefully fix mac issues

* add designers

* I don't even know man

* add more schedule prefs

* maybe working mutation??

* fix getschedule call

* table

* removed an s

* done!

* Updated .env.example

* Fixed CORS

---------
